syntax = "proto3";

package keyvalue;

option go_package = "keyvaluepb";

message GetRequest {}

message GetResponse {}

service KeyValue {
	rpc Foo(GetRequest) returns (GetResponse);
	rpc Bar(stream GetRequest) returns (GetResponse);
	rpc Baz(GetRequest) returns (stream GetResponse);
	rpc Qux(stream GetRequest) returns (stream GetResponse);
}
