syntax = "proto3";

package keyvalue;

option go_package = "keyvaluepb";

message GetRequest {}
message GetResponse {}
message SetRequest {}
message SetResponse {}

service Store {
  rpc Get(GetRequest) returns (GetResponse);
  rpc Set(SetRequest) returns (SetResponse);
}
